--- a/index.html
+++ b/index.html
@@ -91,6 +91,64 @@
 </div>
 </div>
 </div>
+
+<section class="contact" id="contact">
+  <div class="container">
+    <div class="row">
+      <div class="col text-center">
+        <h2> Contact</h2>
+    </div>
+    <div class= "row">
+      <div class="col">
+        <form>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="inputEmail4" style="color: #20639b">Email</label>
+      <input type="email" class="form-control" id="inputEmail4" style="border-color: #20639b">
+    </div>
+    <div class="form-group col-md-6">
+      <label for="inputPassword4" style="color: #20639b">Password</label>
+      <input type="password" class="form-control" id="inputPassword4" style="border-color: #20639b">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="inputAddress" style="color: #20639b">Alamat</label>
+    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" style="border-color: #20639b"style="border-color: #20639b">
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="inputCity" style="color: #20639b">City</label>
+      <input type="text" class="form-control" id="inputCity" style="border-color: #20639b">
+    </div>
+    <div class="form-group col-md-4">
+      <label for="inputState" style="color: #20639b">Negara</label>
+      <select id="inputState" class="form-control" style="border-color: #20639b">
+        <option selected>Choose...</option>
+        <option>Indonesia</option>
+        <option>WKWKLAND</option>
+        <option>NEGARA IMAJINASI</option>
+        <option>NEGERI SERIBU BINTANG</option>
+      </select>
+    </div>
+    <div class="form-group col-md-2">
+      <label for="inputZip" style="color: #20639b">Kode pos</label>
+      <input type="text" class="form-control" id="inputZip" style="border-color: #20639b">
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="gridCheck">
+      <label class="form-check-label" for="gridCheck">
+        Check me out
+      </label>
+    </div>
+  </div>
+  <button type="submit" class="btn btn-primary">Sign in</button>
+</form>
+    </div>
+  </div>
+</div>
+</section>
   <br>
   <br>
   <div class="">
