mengupdate fitur fixed image

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="script.js"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
@@ -42,25 +43,36 @@
 </nav>
 <!-- end nav -->
 <br>
-<div class="Home" style="padding-top: 100px;">
+<div class="Home">
 <div class="jumbotron jumbotron-fluid">
   <div class="container text-center">
   <img src="gopin.jpg" width="300px" class="rounded-circle">
-    <h1 class="display-4">Muhammad Alfin Syaghaf</h1>
+  <br>
+  <br>
+    <h1 class="display-4" style="font-weight: bold;">Muhammad Alfin Syaghaf</h1>
     <h4 class="display-8">A HUMAN | STUDENT | SANTRI</h4>
     <br>
     <br>
-    <h1 class="tentang" id="tentang" style="padding-top: 150px">Tentang Saya</h1>
+</div>
+</div>
+
+
+    <!-- about -->
+    <div class="Home">
+<h1 class="col text-center" id="tentang" style="padding-top: 100px">Tentang Saya</h1>
     <div class="row">
     <div class="col">
-        <p>Halo,selamat datang ditampilan utama website ini. Saya adalah Muhammad Alfin Syaghaf selaku admin website ini, saya berasal dari Jakarta dan sekarang menetap di Cirebon Jawa Barat. Website ini menyediakan berbagai informasi tentang kepemerintahan, info kota Cirebon
+        <p>Halo,selamat datang ditampilan utama website ini. Saya adalah Muhammad Alfin Syaghaf selaku admin website ini, saya berasal dari Jakarta dan sekarang menetap di Cirebon Jawa Barat. Website ini menyediakan berbagai informasi tentang kepemerintahan, info kota Cirebon</p>
     </div>
     <div class="col">
-      <p>pelayanan gawat darurat, informasi kepegawaian, kepengusuran, jasa pembuatan aplikasi. Pewujudan gerakan Smart City untuk wilayah 3 Jawa Barat yang terdiri dari Cirebon, Indramayu, Kuningan, dan Majalengka demi terwujudnya wilayah 3 Jawa Barat akan lebih maju dan berkembang untuk kedepannya
+      <p>pelayanan gawat darurat, informasi kepegawaian, kepengusuran, jasa pembuatan aplikasi. Pewujudan gerakan Smart City untuk wilayah 3 Jawa Barat yang terdiri dari Cirebon, Indramayu, Kuningan, dan Majalengka demi terwujudnya wilayah 3 Jawa Barat akan lebih maju dan berkembang untuk kedepannya</p>
     </div>
   </div>
-      </div>
-    </div>
+</div
+
+
+
+
 <div class="container">
   <div class="row">
     <div class="col text-center">
